# djangy

./: .coverage  .coveragerc  .gitignore  README.md  get_users.py  manage.py  playground.py  pyproject.toml  requirements.txt  setup_test_env.py
djangy/: asgi.py  settings.py  urls.py  wsgi.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
polls/templates/polls/: details.html  index.html  results.html
templates/admin/: base_site.html
