[project]
name = "djangy"
version = "0.1.0"
description = "Django Project"
authors = [
    {name = "dj-mc", email = "49037253+dj-mc@users.noreply.github.com"},
]
dependencies = [
    "django>=4.1.1",
    "psycopg2>=2.9.3",
    "pip-tools>=6.8.0",
]
requires-python = ">=3.10"
license = {text = "None"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
dev = "python3 manage.py runserver"
migrate = "python3 manage.py migrate"
test = "python3 manage.py test"
